@@ -22,6 +22,9 @@ Core and builtins
 Library
 -------
 
+- Bug #822974: Honor timeout in telnetlib.{expect,read_until}
+  even if some data are received.
+
 - Bug #1267547: Put proper recursive setup.py call into the
   spec file generated by bdist_rpm.
 
